--- a/css/main.css
+++ b/css/main.css
@@ -39,8 +39,12 @@ body{
 form{
     background-color: white;
     padding: 2rem;
-    margin: 4.15rem -1rem 0rem -1rem;
+    margin: 4.15rem -1rem 3.2rem -1rem;
 }
+
+.form__group1{
+    width: 100%;
+} 
 
 label{
     color: #2D7D98;
@@ -54,13 +58,16 @@ input[type="text"]{
     border: 1px solid grey;
     border-radius: 5px;
     width: 100%;
-    height: 2.5rem;
+    height: 2.6rem;
+    padding: 0rem;
+    outline: 0rem;
 }
+
 
 .form__group1 p{
     color: grey;
     font-size: .90rem;
-    margin: .4rem 0rem 1.9rem 0rem;
+    margin: .4rem 0rem 1.3rem 0rem;
 }
 
 input[type="button"]{
@@ -72,4 +79,43 @@ input[type="button"]{
     color: white;
     width: 100%;
     height: 4rem;
+}
+ 
+@media (min-width:730px){
+
+    form{
+     display: flex;
+     justify-content:space-around;
+     align-items: center;
+     border-radius: 8px;
+     width:65%;
+     margin: 1.5rem;
+     padding-bottom: 0rem;
+     
+    }
+
+    .form__group1 {
+       flex: 2;
+       text-align: left;
+       margin-right: 2rem;
+    }
+
+    input[type="button"]{
+        flex: 1;
+        height: 2.8rem;
+        margin-top: -.8rem;
+    }
+    label{
+        padding-bottom: 1rem;
+    }
+    .form__group1 p{
+        margin: .1rem 0rem 2rem 0rem;
+    }
+}
+@media (min-width:1275px){
+
+    form{
+     width:50%;
+    }
+
 }
