--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@ body{
 
 .hero{
     background: url('/images/bg.jpg');
+    background-size: cover;
     text-align: center;
     padding:0.75rem;
 }
@@ -82,14 +83,17 @@ input[type="button"]{
 }
  
 @media (min-width:730px){
-
+    .hero{
+        text-align: left;
+        padding:2rem;
+    }
     form{
      display: flex;
      justify-content:space-around;
      align-items: center;
      border-radius: 8px;
      width:65%;
-     margin: 1.5rem;
+     margin: 0rem;
      padding-bottom: 0rem;
      
     }
@@ -113,7 +117,10 @@ input[type="button"]{
     }
 }
 @media (min-width:1275px){
-
+    .hero{
+        background-position: 10px -5px;
+        padding:6rem;
+    }
     form{
      width:50%;
     }
