--- a/css/main.css
+++ b/css/main.css
@@ -106,8 +106,35 @@ input[type="button"]:hover{
  
 .overlay{
     position: absolute;
+    display: none;
+    place-content: center;
     background-color: grey;
+    width: 100%;
+    height: 100vh;
+    z-index: 1;
+    animation: overlay-anim 3s ease-in-out forwards;
 }
+
+
+@keyframes overlay-anim{
+    0%{
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    33%{
+        transform: translateY(0%);
+        opacity: .7;
+    }
+    77%{
+        transform: translateY(0%);
+        opacity: .7;
+    }
+    100%{
+        transform: translateY(0%);
+        opacity: 0;
+    }
+}
+
 .section{
     text-align: center;
     margin-top: 3rem;
